--- a/COVID19Project.Rmd
+++ b/COVID19Project.Rmd
@@ -21,3 +21,19 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 
 ```
+
+
+
+```{r load data}
+url_counties <- "https://raw.githubusercontent.com/nytimes/covid-19-data/master/live/us-counties.csv"
+filename_nyt <- "./data/nyt_counties.csv"
+
+## Download the data locally
+curl::curl_download(
+        url_counties,
+        destfile = filename_nyt
+      )
+
+## Loads the downloaded csv
+df_covid <- read_csv(filename_nyt)
+```
