--- a/air_quality_walter.Rmd
+++ b/air_quality_walter.Rmd
@@ -12,8 +12,16 @@ knitr::opts_chunk$set(echo = TRUE)
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 ```{r loading libraries}
+install.packages(c("maps", "mapdata"))
 library(tidyverse)
 library(tidyr)
+library(ggplot2)
+library(maps)
+library(mapdata)
+library(ggmap)
+
+devtools::install_github("dkahle/ggmap")
+
 
 df_airquality2020<- read.csv("./data/annual_aqi_by_county_2020.csv")
 df_airquality2020
@@ -90,5 +98,27 @@ df_covid_air %>%
     x = "Median AQI",
     y = "Deaths"
   ) 
+```
+```{r}
+
+newDataSet %>% 
+  arrange(desc(Median.AQI)) %>% 
+  #group_by("State") %>% 
+  ggplot() + 
+  geom_col(mapping = aes(x = Median.AQI, y = State))
+
+
+
+
+
+
+```
+```{r}
+states <- map_data("state")
+ggplot(states) + 
+  geom_polygon(aes(x = long, y = lat, fill = region, group = group), color = "white") + 
+  coord_fixed(1.3) +
+  guides(fill=FALSE)  # do this to leave off the color legend
+
 ```
 
