Added info to background

--- a/COVID19Project.Rmd
+++ b/COVID19Project.Rmd
@@ -5,16 +5,18 @@ date: 2020-06-05
 output: github_document
 ---
   
-*Purpose*: Is there a correlation between covid-19 outcomes and air quality?
+*Purpose*: Is there a correlation between COVID-19 outcomes and air quality?
 
 *Background*:
 
-Air pollution is a mixture of solid and gas particles. Because air pollution may originate from different sources depending on location,  
+Air pollution is a mixture of solid and gas particles. Because air pollution may originate from different sources depending on location, our team decided to investigate if there was a connection between air pollution and COVID19.   
 
 Breathing in pollutants from the air is a large risk factor for lung related death. Studies have shown that long term exposure to polluted air can lead to irritation and damage throughout your respiratory pathway. Additionally, this damage is exacerbated in people with existing respiratory illnesses. Covid-19 is a novel coronavirus that emerged in late 2019 and has spread throughout the US and the world affecting millions. The virus and its effects are still being studied, but it has been shown to attack the lungs and cause problems with breathing. Due to the virus' impact on the respiratory system,  a study was conducted by Harvard researchers to analyze the connection between air pollution and Covid-19 mortality in the US. 
 
 https://www.hsph.harvard.edu/news/hsph-in-the-news/air-pollution-linked-with-higher-covid-19-death-rates/
 https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4776742/
+
+In addition to this Harvard paper, Stanford researcher Mary Prunicki speaks about the potential damage that toxic air can have on peoples' immune systems. Her findings include making statements on linking air pollution to disease (diabetes, heart disease, stroke, cancer, etc), all of which increase the risk of death in COVID19. She also comments that air pollution causes a deregulated immune system, making it more likely to cause damage and lay a foundation for potential chronic diseases.   
 
 *Notes*:
 - I had trouble running the Case study in my browser. Note that the `who` dataset is loaded by the `tidyverse`. You can run the Case study locally if you need to!
